# Mentors-App

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: main.yml
back-end/: Dockerfile  manage.py
back-end/mentor_selection/: apps.py  views.py
back-end/mentor_selection/migrations/: 0001_initial.py
back-end/mentors_site/: asgi.py  urls.py  wsgi.py
back_end/: Dockerfile  db.sqlite3
back_end/mentor_selection/: admin.py  models.py  serializers.py  urls.py  views.py
back_end/mentor_selection/migrations/: 0001_initial.py  0002_user_fake_password.py  0003_auto_20211010_1905.py
back_end/mentors_site/: settings.py  urls.py
back_end/nginx/: Dockerfile  nginx.conf
back_end/static/: test.html
mentors_site/: db.sqlite3  manage.py
mentors_site/mentor_selection/: admin.py  apps.py  models.py  views.py
mentors_site/mentor_selection/migrations/: 0001_initial.py
mentors_site/mentors_site/: asgi.py  settings.py  urls.py  wsgi.py
src/: App.js  index.js  mainPage.html
src/API/: PostService.js
src/action/: user.js
src/blocks/content/: content.css
src/blocks/footer/: footer.css
src/blocks/header/: header.css
src/blocks/page/: page.css
src/blocks/profile-card/: profile-card.css
src/blocks/root/: root.css
src/components/: AppRouter.jsx  Styles.css  UserFilter.jsx  UserList.jsx  userItem.jsx
src/pages/: Login.css  Login.jsx  MyProfile.css  MyProfile.jsx  Users.jsx  index.css
src/router/: index.js
src/utils/: Pages.js
(+37 files in other folders)
